FIX: CardUiPair CSS Causing Horizontal Scroll

--- a/src/CardUiPair.css
+++ b/src/CardUiPair.css
@@ -1,18 +1,11 @@
 .cardUiPair {
     display: flex;
-    height: 420px;
-    min-height: 420px;
-    max-width: 400px;
-    min-width: 320px;
-    flex-flow: column nowrap;
-    margin-top: -10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    flex: 1 0 290px;
-    font-size: 13px !important; /* cuidao aqui que las letras desaparecen */
-    line-height: 19px !important;
-    color: #0f1111;
-    margin-bottom: 0 !important;
+    flex-direction: column;
+    width: 100%;
+    max-height: 385px;
+    min-width: 100px;
+    margin: 15px 10px 10px 10px;
+    padding: 0px 0 15px 0;
     z-index: 1;
 }
 
@@ -20,25 +13,16 @@
     height: 150px;
     max-height: 150px;
     min-height: 150px;
-    flex: 1 0 0;
-    margin-top: 10px;
     margin-bottom: 10px;
+    padding-top: 20px;
+    background: white;
+    box-sizing: border-box;
     order: 1;
 }
 
-.cardUiPair__containerOne {
-    background: #fff;
-    height: 100%;
-    margin-bottom: 0;
-    margin-top: 0;
-    overflow: hidden;
-    padding: 20px 0 15px 0;
-    box-sizing: border-box;
-}
-
 .cardUiPair__header {
-    padding: 0 20px;
     margin-bottom: 10px;
+    padding: 0 20px;
 }
 
 .cardUiPair__header h2 {
@@ -46,56 +30,56 @@
     line-height: 27.3px !important;
     font-weight: 700;
     text-rendering: optimizeLegibility;
+    margin: 0;
     padding-bottom: 0;
     padding: 0;
-    margin: 0;
 }
 
 .cardUiPair__body {
-    padding: 0 20px 56px 20px;
     margin-bottom: 0;
+    padding: 0 20px 56px 20px;
 }
 
 .cardUiPair__body a button {
-    width: 100%;
-    background: linear-gradient(to bottom, #f7dfa5, #f0c14b);
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
-    border-radius: 3px;
-    border-style: solid;
-    border-width: 1px;
-    cursor: pointer;
     display: inline-flex;
-    padding: 0;
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-top: 4px;
+    cursor: pointer;
+    height: 30px;
+    width: 100%;
+    margin: 7 10px 0 0px;
+    padding: 0;
+    background: linear-gradient(to bottom, #f7dfa5, #f0c14b);
+    border-color: #a88734 #9c7e31 #846a29;
+    border-radius: 2px;
+    border-style: solid;
+    border-width: 1px;
+    color: #111;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4) inset;
     overflow: hidden;
-    height: 29px;
 }
 
 .cardUiPair__sectionTwo {
     height: 250px;
     max-height: 250px;
     min-height: 250px;
-    flex: 1 0 0;
     margin-top: 10px;
     margin-bottom: 10px;
+    flex: 1 0 0;
     order: 2;
 }
 
-.cardUiPair__containerTwo {
+.cardUiPair__container {
     display: flex;
-    margin-bottom: 22px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 22px;
 }
 
 .cardUiPair__containerTwo a img {
-    max-width: 100%;
-    border: 0;
     height: 100%;
     width: 300px;
+    max-width: 100%;
+    border: 0;
 }
